@@ -3,6 +3,7 @@ package org.codeplay.playcoolbackend.controller;
 
 
 import org.codeplay.playcoolbackend.dto.SongDto;
+import org.codeplay.playcoolbackend.dto.VoteDto;
 import org.codeplay.playcoolbackend.service.SongService;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,6 +14,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.Mockito.doNothing;
@@ -32,31 +34,42 @@ class SongControllerTest {
     private SongService songService;
 
     @Test
-    public void should_get_songs_when_getAll_given_data() throws Exception {
-        // given
-        SongDto songDto = SongDto.builder()
-                .name("song1")
-                .votes(1L)
-                .build();
-        when(songService.getAll()).thenReturn(List.of(songDto));
+    void testGetAllSongs() throws Exception {
+        List<SongDto> mockSongs = Arrays.asList(
+                new SongDto(1L, "Song A", "Album A", "2023-01-01", 10L),
+                new SongDto(2L, "Song B", "Album B", "2023-01-02", 20L)
+        );
 
-        // when
+        when(songService.getAll()).thenReturn(mockSongs);
+
         mockMvc.perform(get("/songs")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().json("[{\"name\":\"song1\",\"votes\":1}]"));
+                .andExpect(content().json("[{\"id\":1,\"name\":\"Song A\",\"album\":\"Album A\",\"releaseDate\":\"2023-01-01\",\"votes\":10},{\"id\":2,\"name\":\"Song B\",\"album\":\"Album B\",\"releaseDate\":\"2023-01-02\",\"votes\":20}]"));
     }
 
     @Test
-    public void should_vote_success_when_vote() throws Exception {
-        // given
-        Long id = 1L;
-        doNothing().when(songService).vote(id);
+    void testIsVoted() throws Exception {
+        Long userId = 1L;
+        when(songService.isVoted(userId)).thenReturn(true);
 
-        // when
+        mockMvc.perform(get("/songs/{userId}", userId)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(content().string("true"));
+    }
+
+    @Test
+    void testVote() throws Exception {
+        VoteDto voteDto = new VoteDto();
+        voteDto.setUserId(1L);
+        voteDto.setSongId(1L);
+
+        doNothing().when(songService).vote(voteDto);
+
         mockMvc.perform(post("/songs/vote")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"id\":1}"))
+                        .content("{\"userId\":1,\"songId\":1}"))
                 .andExpect(status().isOk());
     }
 
